MyQueue done. Changed folder structure
MyQueue done.